--- a/docs/amplify-theme/_layouts/quick_start.html
+++ b/docs/amplify-theme/_layouts/quick_start.html
@@ -28,7 +28,7 @@
 									{% endfor %}
 								</div><!-- /.row -->
 								<div>
-                                    <a href="/media/cli_guide"> <button class="btn" >Install AWS Mobile CLI</button> </a>
+                                    <a href="/media/cli_guide"> <button class="btn install-amplify-cli" >Install AWS Mobile CLI</button> </a>
                                     <div id="learn-more-about-cli-box">
                                         <p id="learn-more-about-cli">Learn more about the CLI</p>
                                         <img id="down-arrow" src="/amplify-theme/assets/images/icons/Small/More-Button-no-shadow.svg" />
@@ -44,7 +44,7 @@
 			
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 amp-custom">
+                    <div>
                         <div class="section-top section-top-category section-top-quickstart">
                             <div class="container">
                                 <div class="row">
@@ -112,7 +112,7 @@
             
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 amp-custom">
+                    <div>
                         <div class="section-top section-top-category section-top-quickstart">
                             <div class="container">
                                 <div class="row">
