--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -91,11 +91,11 @@
 		<div class="section section-top" id="marketing-section">
 			<div class="container">
 				<div class="row">
-					<div class="header col-sm-11">
+					<div class="header">
 						A library and command line interface (CLI) made for building cloud-powered applications
 					</div>
-					<div class="subheader col-sm-11">
-						Default implementation included for AWS; Open and pluggable for any custom backend service.
+					<div class="subheader">
+						Default implementation included for AWS; Open and pluggable for any custom backend or service.
 					</div>
 				</div>
 				<div>
@@ -109,7 +109,7 @@
 									<span class="marketing-grid-item">
 										<div class="marketing-grid-content" data-mh>
 											<h2 class="marketing-grid__title">{{ item.title }}</h2>
-											<p>{{ item.excerpt }}</p>
+											<p class="marketing-grid__excerpt">{{ item.excerpt }}</p>
 										</div><!-- /.nav-grid__content -->
 									</span><!-- /.nav-grid__item -->
 								</div><!-- /.col -->
@@ -135,36 +135,32 @@
 				<div class="subheader" id="launch-subheader">
 					AWS Amplify comes with building blocks for frontend and mobile developers to interact with the Cloud. You can mix and match categories below as needed.
 				</div>
-				<div id="grids-container row">
-					<div class="col-sm-12 cloud-grid">
+				<div class="grids-container row">
+					<div class="cloud-grid">
 						<p class="launch-grid-title">Cloud Features</p>
 						<div class="cloud-col">
 							<div class="row">
 								{% for item in page.cloud_grid_left %}
-										<span class="cloud-grid-item cloud-grid-item-left">
-											<div class="cloud-grid-content" data-mh>
-												<img class="present" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/icons/Misc/present.svg">
-												<div class="cloud-grid-text">
-													<h2 class="cloud-grid__title">{{ item.title }}</h2>
-													<p class="cloud-grid__excerpt">{{ item.excerpt }}</p>
-												</div>
-											</div><!-- /.nav-grid__content -->
-										</span><!-- /.nav-grid__item -->
+									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.url }}" class="cloud-grid-item cloud-grid-item-left">
+										<img class="present" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/icons/Misc/present.svg">
+										<div class="cloud-grid-text">
+											<h2 class="cloud-grid__title">{{ item.title }}</h2>
+											<p class="cloud-grid__excerpt">{{ item.excerpt }}</p>
+										</div>
+									</a><!-- /.nav-grid__item -->
 								{% endfor %}
 							</div><!-- /.row -->
 						</div><!-- /.nav-grid -->
 						<div class="cloud-col">
 							<div class="row">
 								{% for item in page.cloud_grid_right %}
-										<span class="cloud-grid-item cloud-grid-item-right">
-											<div class="cloud-grid-content" data-mh>
-												<img class="present" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/icons/Misc/present.svg">
-												<div class="cloud-grid-text">
-													<h2 class="cloud-grid__title">{{ item.title }}</h2>
-													<p class="cloud-grid__excerpt">{{ item.excerpt }}</p>
-												</div>
-											</div><!-- /.nav-grid__content -->
-										</span><!-- /.nav-grid__item -->
+									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.url }}" class="cloud-grid-item cloud-grid-item-right">
+										<img class="present" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/icons/Misc/present.svg">
+										<div class="cloud-grid-text">
+											<h2 class="cloud-grid__title">{{ item.title }}</h2>
+											<p class="cloud-grid__excerpt">{{ item.excerpt }}</p>
+										</div><!-- /.nav-grid__content -->
+									</a><!-- /.nav-grid__item -->
 								{% endfor %}
 							</div><!-- /.row -->
 						</div><!-- /.nav-grid -->
@@ -173,7 +169,7 @@
 						<p class="launch-grid-title">Utility Modules</p>
 						<div class="row">
 							{% for item in page.utility_modules %}
-									<span class="cloud-grid-item">
+									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.url }}" class="cloud-grid-item">
 										<div class="cloud-grid-content" data-mh>
 											<img class="present" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/icons/Misc/present.svg">
 											<div class="cloud-grid-text">
@@ -181,7 +177,7 @@
 												<p class="cloud-grid__excerpt">{{ item.excerpt }}</p>
 											</div>
 										</div><!-- /.nav-grid__content -->
-									</span><!-- /.nav-grid__item -->
+									</a><!-- /.nav-grid__item -->
 							{% endfor %}
 						</div><!-- /.row -->
 					</div>
@@ -220,34 +216,30 @@
 					Install and configure AWS Amplify to start working with cloud services.
 				</div>
 				<div class="install-container row">
-					<div class="col-sm-6 col-md-3 col-lg-3 install-col">
 						<div class="install-box" id="js-box">
 							<img class="logo-lg" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Logos/JS-Small-White@2x.png">
 							<div class="install-text">Build with JavaScript</div>
 							<button class="install-button" id="js-btn">Get Started</button>
 						</div>
-					</div>
-					<div class="col-sm-6 col-md-3 col-lg-3 install-col">
+					
 						<div class="install-box" id="react-box">
 							<img class="logo-lg" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Logos/React-Small-White@2x.png">
 							<div class="install-text">Build with React</div>
 							<button class="install-button" id="react-btn">Get Started</button>
 						</div>
-					</div>
-					<div class="col-sm-6 col-md-3 col-lg-3 install-col">
+					
 						<div class="install-box" id="react-native-box">
 							<img class="logo-lg" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Logos/React-Small-White@2x.png">
 							<div class="install-text">Build with React Native</div>
 							<button class="install-button" id="react-native-btn">Get Started</button>
 						</div>
-					</div>
-					<div class="col-sm-6 col-md-3 col-lg-3 install-col">
+					
 						<div class="install-box" id="angular-box">
 							<img class="logo-lg" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/images/Logos/Angular-Med-White@1x.png">
 							<div class="install-text">Build with Angular</div>
 							<button class="install-button" id="angular-btn">Get Started</button>
 						</div>
-					</div>
+					
 				</div>
 				<div>
 					<button class="btn" id="view-all-platforms-btn">View all platforms</button>
