--- a/docs/amplify-theme/_layouts/quick_start.html
+++ b/docs/amplify-theme/_layouts/quick_start.html
@@ -59,22 +59,22 @@
                                     </div>
                                     <div class="platform-container">
                                         <div class="platform-box">
-                                            <img class="circle-badge" src="/amplify-theme/assets/images/Circle-Badge/JS@1x.png" />
+                                            <img class="circle-badge" src="../amplify-theme/assets/images/Circle-Badge/JS@1x.png" />
                                             <p class="platform-title">Build with JavaScript</p>
                                             <a href="quick_start"> <button class="btn">Get Started</button> </a>
                                         </div>
                                         <div class="platform-box">
-                                            <img class="circle-badge" src="/amplify-theme/assets/images/Circle-Badge/React@1x.png" />
+                                            <img class="circle-badge" src="../amplify-theme/assets/images/Circle-Badge/React@1x.png" />
                                             <p class="platform-title">Build with React</p>
                                             <a href="quick_start"> <button class="btn">Get Started</button> </a>
                                         </div>
                                         <div class="platform-box">
-                                            <img class="circle-badge" src="/amplify-theme/assets/images/Circle-Badge/ReactNat@1x.png" />
+                                            <img class="circle-badge" src="../amplify-theme/assets/images/Circle-Badge/ReactNat@1x.png" />
                                             <p class="platform-title">Build with React Native</p>
                                             <a href="quick_start"> <button class="btn">Get Started</button> </a>
                                         </div>
                                         <div class="platform-box">
-                                            <img class="circle-badge" src="/amplify-theme/assets/images/Circle-Badge/Angular@1x.png" />
+                                            <img class="circle-badge" src="../amplify-theme/assets/images/Circle-Badge/Angular@1x.png" />
                                             <p class="platform-title">Build with Angular</p>
                                             <a href="quick_start"> <button class="btn">Get Started</button> </a>
                                         </div>
