picture path fix 2

--- a/docs/amplify-theme/_layouts/quick_start.html
+++ b/docs/amplify-theme/_layouts/quick_start.html
@@ -87,17 +87,17 @@
                                     </div>
                                     <div class="platform-container">
                                             <div class="platform-box">
-                                                <img class="circle-badge" src="/amplify-theme/assets/images/Circle-Badge/Apple@1x.png" />
+                                                <img class="circle-badge" src="../amplify-theme/assets/images/Circle-Badge/Apple@1x.png" />
                                                 <p class="platform-title">Build with iOS</p>
                                                 <a href="quick_start"> <button class="btn">Get Started</button> </a>
                                             </div>
                                             <div class="platform-box">
-                                                <img class="circle-badge" src="/amplify-theme/assets/images/Circle-Badge/Droid@1x.png" />
+                                                <img class="circle-badge" src="../amplify-theme/assets/images/Circle-Badge/Droid@1x.png" />
                                                 <p class="platform-title">Build with Android</p>
                                                 <a href="quick_start"> <button class="btn">Get Started</button> </a>
                                             </div>
                                             <div class="platform-box">
-                                                <img class="circle-badge" src="/amplify-theme/assets/images/Circle-Badge/Xamarin@1x.png" />
+                                                <img class="circle-badge" src="../amplify-theme/assets/images/Circle-Badge/Xamarin@1x.png" />
                                                 <p class="platform-title">Build with Xamarin</p>
                                                 <a href="quick_start"> <button class="btn">Get Started</button> </a>
                                             </div>
