picture path fix 9

--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -37,7 +37,7 @@
 										<img class="logo-sm" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/Apple-Small-White@1x.png">
 										<img class="logo-sm" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/Droid-Small-White@1x.png">
 									</div>
-									<img id="half-phone" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Phone-Banner@2x.png">
+									<img id="half-phone" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Phone-Banner@2x.png">
 								</div>
 							</div><!-- /.align-inner -->
 						</div><!-- /.align-container -->
