picture path fix 9

--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -37,7 +37,7 @@
 										<img class="logo-sm" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/Apple-Small-White@1x.png">
 										<img class="logo-sm" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/Droid-Small-White@1x.png">
 									</div>
-									<img id="half-phone" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Phone-Banner@2x.png">
+									<img id="half-phone" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Phone-Banner@2x.png">
 								</div>
 							</div><!-- /.align-inner -->
 						</div><!-- /.align-container -->
@@ -199,8 +199,8 @@
 					<button class="btn" id="library-btn">View Library</button>
 				</div>
 				<div class="row image-container">
-					<img class="library-image" id="library-auth" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Auth@1x.png">
-					<img class="library-image" id="library-chat" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Chat@1x.png">
+					<img class="library-image" id="library-auth" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Auth@1x.png">
+					<img class="library-image" id="library-chat" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Chat@1x.png">
 				</div>
 			</div><!-- /.container -->
 		</div><!-- /.section -->
