picture path fix 10

--- a/docs/amplify-theme/_includes/site-header.html
+++ b/docs/amplify-theme/_includes/site-header.html
@@ -73,7 +73,7 @@
 								{% endif %}
 							</li>
 						{% endfor %}
-						<li class="site-search">
+						<li class="site-search" id="search-input-box">
 							<input placeholder="   Search" type="text" id="search-input"><img class="search-image" id="search-image" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/layout/Search.svg"></input>
 						</li>
 					</ul><!-- /.site-header__nav -->
